[package]
name = "monster-hunter-tui-rust"
version = "0.1.0"
description = "An example generated using the hello-world template"
authors = ["Levikr05 <ben.levi.mu2005@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
crossterm = "0.29.0"
ratatui = "0.30.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
